[package]
name = "tcp_server_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version="1", features=["v4", "serde"] }
anyhow = "1"
rand = "0.8"  
toml = "0.7" 

# --- Optional GUI feature ---
iced = { version = "0.12", optional = true, features = ["tokio"] }

[features]
default = []          # default = headless mode, no GUI compiled
gui = ["iced"]        # enabling GUI compiles iced

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "server_gui"
path = "src/main_gui.rs"
required-features = ["gui"]